<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_other_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_30"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/btnShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_other_item"
                android:padding="@dimen/d_8"
                android:src="@mipmap/ic_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_4"
                android:text="@string/string_share"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnCollect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/collectImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_other_item"
                android:padding="@dimen/d_8"
                android:src="@mipmap/ic_collect_tag" />

            <TextView
                android:id="@+id/collectTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_4"
                android:text="@string/string_collect"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnCopy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_other_item"
                android:padding="@dimen/d_8"
                android:src="@mipmap/ic_copy_url" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_4"
                android:text="@string/string_copy_url"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnBrowser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_other_item"
                android:padding="@dimen/d_8"
                android:src="@mipmap/ic_browser" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_4"
                android:text="@string/string_open_browser"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp12" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp14"
        android:gravity="center"
        android:text="@string/string_cancel"/>
</LinearLayout>